Menyelesaikan fitur utama

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,17 @@
     "rules": {
         "quotes": "off",
         "react/jsx-filename-extension": "off",
-        "comma-dangle": "off"
+        "react/jsx-one-expression-per-line": "off",
+        "comma-dangle": "off",
+        "linebreak-style": "off",
+        "no-underscore-dangle": "off",
+        "no-use-before-define": "off",
+        "no-alert": "off",
+        "import/no-extraneous-dependencies": "off",
+        "react/prop-types": "off",
+        "react/self-closing-comp": "off",
+        "jsx-a11y/no-noninteractive-element-interactions": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "no-console": "off"
     }
 }
