--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,8 @@
         "react/self-closing-comp": "off",
         "jsx-a11y/no-noninteractive-element-interactions": "off",
         "jsx-a11y/click-events-have-key-events": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "no-plusplus": "off",
+        "no-param-reassign": "off"
     }
 }
