--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,20 +2,21 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "jest": true
+        "jest": true,
+        "cypress/globals": true
     },
     "extends": [
         "plugin:react/recommended",
         "airbnb"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "cypress"
     ],
     "rules": {
         "quotes": "off",
@@ -37,6 +38,7 @@
         "max-len": "off",
         "react/jsx-no-useless-fragment": "off",
         "indent": "off",
-        "implicit-arrow-linebreak": "off"
+        "implicit-arrow-linebreak": "off",
+        "react/react-in-jsx-scope": "off"
     }
 }
