--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cypress": "^12.8.1",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
